# JRS-Chat-Logger

./: .gitignore  CMakeLists.txt  README.md  SOUND_FILES.md  guild_tab_help.txt
.github/workflows/: build.yml
scripts/: analyze_dump.py  build.ps1  check-prereqs.ps1
src/: app_settings.cpp  app_settings.h  bell_processor.cpp  bell_processor.h  chat_logger_service.cpp  chat_logger_service.h  chat_packet_processor.cpp  chat_packet_processor.h  chat_type.h  dc_manager.cpp  dc_manager.h  dc_setting_dialog.cpp  dc_setting_dialog.h  drop_packet_processor.cpp  drop_packet_processor.h  equipment_packet_processor.cpp  equipment_packet_processor.h  gold_processor.cpp  gold_processor.h  guild_compare_window.cpp  guild_compare_window.h  guild_member_processor.cpp  guild_member_processor.h  inv_full_worker.cpp  inv_full_worker.h  item_dat_loader.cpp  item_dat_loader.h  item_logger_service.cpp  item_logger_service.h  item_packet_processor.cpp  item_packet_processor.h  main.cpp  network_helper.cpp  network_helper.h  packet_capture_service.cpp  packet_capture_service.h  packet_crypt.cpp  packet_crypt.h  process_monitor_service.cpp  process_monitor_service.h  (+19 more)
